src/test/ui/issues/issue-7XXXX/issue-72574-1.stderr
error: `_x @` is not allowed in a tuple
  --> $DIR/issue-72574-1.rs:4:14
   |
LL |         (_a, _x @ ..) => {}
   |              ^^^^^^^ this is only allowed in slice patterns
   |
   = help: remove this and bind each tuple field independently
help: if you don't need to use the contents of _x, discard the tuple's remaining fields
   |
LL |         (_a, ..) => {}
   |              ~~

error: `..` patterns are not allowed here
  --> $DIR/issue-72574-1.rs:4:19
   |
LL |         (_a, _x @ ..) => {}
   |                   ^^
   |
   = note: only allowed in tuple, tuple struct, and slice patterns

error[E0308]: mismatched types
  --> $DIR/issue-72574-1.rs:4:9
   |
LL |         (_a, _x @ ..) => {}
   |         ^^^^^^^^^^^^^ expected a tuple with 3 elements, found one with 2 elements
   |
   = note: expected tuple `({integer}, {integer}, {integer})`
              found tuple `(_, _)`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
